<resources>
  <string name="app_name">Quran</string>
  <string name="downloadPrompt_title">Download Required Files?</string>
  <string name="downloadPrompt">In order for Quran Android to work properly,
        we need to download some files. If you do not do this now, the app
        may not work reliably and will require an Internet connection for reading.
        Would you like to download the required files now?
    </string>
  <string name="downloadTabletPrompt">We recently added improved images for
        tablets. Would you like to download these images now?</string>
  <string name="downloadImportantPrompt">There is a small yet important update
        for the Quran images you have on your device. Would you like to download this
        patch now?
    </string>
  <string name="downloadPrompt_ok">Yes</string>
  <string name="downloadPrompt_no">No</string>
  <string name="downloading_message">Please wait for the files to download (resume supported).</string>
  <string name="extracting_title">Processing&#8230;</string>
  <string name="menu_about">About Us</string>
  <string name="menu_other_apps">Other apps</string>
  <string name="menu_settings" translatable="false">Settings</string>
  <string name="menu_jump_last_page">Last page</string>
  <string name="menu_bookmarks">Bookmarks</string>
  <string name="menu_bookmarks_page">Page Bookmarks</string>
  <string name="menu_bookmarks_ayah">Ayah Bookmarks</string>
  <string name="menu_sort">Sort</string>
  <string name="menu_sort_date">Date Added</string>
  <string name="menu_sort_location">Location in Quran</string>
  <string name="menu_sort_group_by_tags">Group by Tags</string>
  <string name="menu_show_recents" translatable="false">@string/recent_pages</string>
  <string name="menu_show_date">Show Date</string>
  <string name="menu_translation">Show Translation</string>
  <string name="menu_back_to_page">Show Quran</string>
  <string name="menu_help">Help</string>
  <string name="menu_tajweed">Tajweed Rules</string>
  <string name="menu_search">Search</string>
  <string name="menu_get_translations">Get Translations</string>
  <string name="menu_jump">@string/gotoPage</string>
  <string name="gotoPage">Go to page</string>
  <string name="please_wait">Please wait…</string>
  <string name="update_available_title">Update Available</string>
  <string name="update_available_message">A new version of the app is available. Please update to continue using the app.</string>
  <string name="update_available_optional_message">A new version of the app is available with improvements and bug fixes.</string>
  <string name="update_now">Update Now</string>
  <string name="update_postpone">Remind Me Later</string>
  <string name="update_version_info">Current: v%1$s | Latest: v%2$s</string>
  <string name="update_forced_message">This update is required to continue using the app.</string>
  <string name="about_description">The Holy Qur’an — a free Kannada Qur’an application designed for Android smartphones. &lt;br/>&lt;br/>This application has been developed using the open-source Android project &lt;a href="https://quran.com/">QURAN.COM  &lt;/a>.May Allah reward them with the best of rewards.&lt;br/>&lt;br/>
    The Kannada translation was translated by Muhammad Hamza Puttur and reviewed by Umar ibn Ahmad Madani, Ahmad S. M., and Abu Bakr Nazeer Salafi. &lt;br/>&lt;br/>  &lt;b>The Noble Qur’an along with its Kannada translation &lt;br/>
 &lt;i> Publisher: King Fahd Holy Quran Printing Complex, Madinah, Saudi Arabia  &lt;i/> &lt;/b> &lt;br/>

  </string>
  <string name="about_data_sources">Data Sources</string>
  <string name="about_images">Images</string>
  <string name="about_madani_images">The Quran images are based on the fonts from the King Fahd Quran Printing Complex</string>
  <string name="about_madani_images_url" translatable="false">https://github.com/quran/quran.com-images</string>
  <string name="about_naskh_images">The Quran images for the Naskh app are taken (with permission) from SHL Info Systems</string>
  <string name="about_naskh_images_url" translatable="false">http://www.shlinfosystems.com</string>
  <string name="about_qaloon_images">Qaloon images are used with the permission of Nous Memes Editions Et Diffusion (Tunisia)</string>
  <string name="about_quranicaudio" translatable="false">QuranicAudio</string>
  <string name="about_quranicaudio_summary">Gapless mp3 Quran recitations</string>
  <string name="about_quranicaudio_url" translatable="false">https://quranicaudio.com</string>
  <string name="about_quran_ksu">Electronic Moshaf Project</string>
  <string name="about_quran_ksu_summary">The King Saud University Electronic Moshaf Project is the app\'s source of Arabic Tafaseer and translations for various languages. It is also the source for Dr. Ayman Suwaid\'s recitation.</string>
  <string name="about_quran_ksu_url" translatable="false">https://quran.ksu.edu.sa</string>
  <string name="about_furqan" translatable="false">Al-Bāḥith al-Qur’ānī (tafsir.app)</string>
  <string name="about_furqan_summary">Uthmani text and Arabic Tafaseer</string>
  <string name="about_furqan_url" translatable="false">https://tafsir.app</string>
  <string name="about_quran_enc" translatable="false">Noble Quran Encyclopedia (QuranEnc)</string>
  <string name="about_quran_enc_summary">Translations for many languages</string>
  <string name="about_quran_enc_url" translatable="false">https://quranenc.com</string>
  <string name="about_tanzil" translatable="false">Tanzil</string>
  <string name="about_tanzil_summary">Translations for a few languages</string>
  <string name="about_tanzil_url" translatable="false">http://tanzil.net</string>
  <string name="about_noorhidayat" translatable="false">Noorhidayat</string>
  <string name="about_noorhidayat_summary">Noorehira font and Mufti Taqi Translation</string>
  <string name="about_noorhidayat_url" translatable="false">http://www.noorehidayat.org</string>
  <string name="about_open_source">Open Source Projects</string>
  <string name="about_androidx" translatable="false">AndroidX</string>
  <string name="about_androidx_url" translatable="false">https://developer.android.com/jetpack/androidx</string>
  <string name="about_dagger2" translatable="false">Dagger 2</string>
  <string name="about_dagger2_url" translatable="false">https://google.github.io/dagger</string>
  <string name="about_dnsjava" translatable="false">dnsjava</string>
  <string name="about_dnsjava_url" translatable="false">http://dnsjava.org</string>
  <string name="about_material_components" translatable="false">Material Components for Android</string>
  <string name="about_material_components_url" translatable="false">https://github.com/material-components/material-components-android</string>
  <string name="about_timber" translatable="false">Timber</string>
  <string name="about_timber_url" translatable="false">https://github.com/JakeWharton/timber</string>
  <string name="about_kotlin" translatable="false">Kotlin</string>
  <string name="about_kotlin_url" translatable="false">https://kotlinlang.org</string>
  <string name="about_numberPicker" translatable="false">Number Picker</string>
  <string name="about_numberPicker_url" translatable="false">https://github.com/ShawnLin013/NumberPicker</string>
  <string name="about_okhttp" translatable="false">OkHttp</string>
  <string name="about_okhttp_url" translatable="false">https://github.com/square/okhttp</string>
  <string name="about_rxjava" translatable="false">RxJava</string>
  <string name="about_rxjava_url" translatable="false">https://github.com/ReactiveX/RxJava</string>
  <string name="about_rxandroid" translatable="false">RxAndroid</string>
  <string name="about_rxandroid_url" translatable="false">https://github.com/ReactiveX/RxAndroid</string>
  <string name="about_moshi" translatable="false">Moshi</string>
  <string name="about_moshi_url" translatable="false">https://github.com/square/moshi</string>
  <string name="about_sliding_panel" translatable="false">AndroidSlidingUpPanel</string>
  <string name="about_sliding_panel_url" translatable="false">https://github.com/umano/AndroidSlidingUpPanel</string>
  <string name="about_others">Others</string>
  <string name="about_contributors">Contributors</string>
  <string name="about_contributors_summary">A list of people who contributed to the development of Quran for Android</string>
  <string name="about_contributors_url" translatable="false">https://github.com/quran/quran_android/blob/main/CONTRIBUTORS.md</string>
  <string name="tajweed_rules_title">Tajweed Rules</string>
  <string name="tag_bookmark">Tag Bookmark</string>
  <string name="delete_tag">Delete Tag</string>
  <string name="edit_tag">Edit Tag</string>
  <string name="new_tag">New Tag</string>
</resources>