<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/cab_tag_bookmark"
          android:icon="@drawable/tag_24"
          android:title="@string/tag_bookmark"
          app:showAsAction="ifRoom"
        />
    <item android:id="@+id/cab_edit_tag"
          android:icon="@drawable/edit_24"
          android:title="@string/edit_tag"
          app:showAsAction="ifRoom" />
    <item android:id="@+id/cab_delete"
          android:icon="@drawable/cancel_24"
          android:title="@string/delete_tag"
          app:showAsAction="ifRoom" />
    <item android:id="@+id/cab_new_tag"
          android:icon="@drawable/add_tag_plus_green_24"
          android:title="@string/new_tag"
          app:showAsAction="ifRoom" />
</menu>
